--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   simple_animations: ^1.3.3
+  carousel_slider: ^2.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,9 +44,42 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/
-  #  - images/a_dot_ham.jpeg
+   - assets/product1.jpg
+   - assets/product2.jpg
+   - assets/product3.jpg
+   - assets/product4.jpg
+   - assets/product5.jpg
+   - assets/product6.jpg
+   - assets/product7.jpg
+   - assets/product8.jpg
+   - assets/product9.jpg
+   - assets/product10.jpg
+   - assets/product11.jpg
+   - assets/product12.jpg
+   - assets/images/clock.png
+   - assets/images/light-1.png
+   - assets/images/light-2.png
+   - assets/images/background.png
+   - assets/banner1.jpg
+   - assets/banner3.jpg
+   - assets/banner4.jpg
+   - assets/banner5.jpg
+   - assets/banner6.jpg
+   - assets/banner7.jpg
+   - assets/banner8.jpg
 
+  fonts:
+    - family: poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins-Black.ttf
+          weight: 900
+
+  module:
+    ...
+    androidX: true
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
